--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,11 +41,11 @@ jobs:
           cosign-release: 'v2.2.4'
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226
+        uses: docker/setup-buildx-action@v3
 
       - name: Log into registry
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -53,25 +53,27 @@ jobs:
 
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch,suffix=-${{ matrix.target }}
-            type=ref,event=tag,suffix=-${{ matrix.target }}
-            type=raw,value=latest-${{ matrix.target }},enable=${{ github.ref == 'refs/heads/master' }}
+          flavor: |
+            suffix=-${{ matrix.target }}
+
+      - name: Create RAM disk for Docker cache (self-hosted only)
+        if: ${{ matrix.platform == 'self-hosted' }}
+        run: |
+          mkdir -p /dev/shm/docker-build-cache
 
       - name: Build and push Docker image
-        id: build-and-push
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09
+        uses: docker/build-push-action@v5
         with:
           context: .
           platforms: ${{ matrix.target }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=local,src=/dev/shm/docker-build-cache
+          cache-to: type=local,dest=/dev/shm/docker-build-cache,mode=max
 
       - name: Sign the published Docker image
         if: ${{ github.event_name != 'pull_request' && matrix.platform == 'ubuntu-latest' }}
@@ -90,17 +92,21 @@ jobs:
 
     steps:
       - name: Log into registry
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create and push manifest
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09
-        with:
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:master
-          platforms: linux/amd64,linux/arm64
+        run: |
+          docker manifest create ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:master-amd64 \
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:master-arm64
+          
+          docker manifest create ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:master \
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:master-amd64 \
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:master-arm64
+          
+          docker manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          docker manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:master
