--- a/.github/workflows/check-for-update.yml
+++ b/.github/workflows/check-for-update.yml
@@ -2,7 +2,7 @@ name: Check for Updates
 
 on:
   schedule:
-    - cron: '0 */2 * * *'  # Runs every 2 hours
+    - cron: '0 */1 * * *'  # Runs every 1 hour
 
 jobs:
   check:
