--- a/.github/workflows/check-for-update.yml
+++ b/.github/workflows/check-for-update.yml
@@ -3,6 +3,12 @@ name: Check for Updates
 on:
   schedule:
     - cron: '*/5 * * * *'  # Runs every 1 hour
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Reason for manual trigger'
+        required: false
+        default: 'Manual check for update'
 
 jobs:
   check:
