--- a/.github/workflows/check-for-update.yml
+++ b/.github/workflows/check-for-update.yml
@@ -41,8 +41,9 @@ jobs:
       - name: Trigger Docker build
         if: steps.check.outputs.update_detected == 'true'
         run: |
-          curl -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
-            https://api.github.com/repos/QinCai-rui/rpi-web-shell-docker/actions/workflows/docker-publish.yml/dispatches \
-            -d '{"ref":"master", "inputs":{"reason":"Auto-triggered due to update in rpi-web-shell"}}'
+          gh api \
+           --method POST \
+           -H "Accept: application/vnd.github+json" \
+           -H "X-GitHub-Api-Version: 2022-11-28" \
+           /repos/QinCai-rui/rpi-web-shell-docker/actions/workflows/158499551/dispatches \
+           -f ref=master
