--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -47,7 +47,15 @@ jobs:
         with:
           driver: docker-container
           buildkitd-flags: --allow-insecure-entitlement security.insecure --allow-insecure-entitlement network.host
+      
+      - name: Verify Buildx driver
+        run: docker buildx inspect
 
+      - name: Create and use a new builder
+        run: |
+          docker buildx create --use --name multi-platform-builder --driver docker-container
+          docker buildx inspect --bootstrap
+          
       - name: Log into registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
