--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -37,36 +37,37 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install QEMU and binfmt
-        uses: docker/setup-qemu-action@v2
-        with:
-          platforms: all
+      # Setup QEMU for multi-architecture builds
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
+      # Setup Docker Buildx with explicit driver configuration
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        id: buildx
+        uses: docker/setup-buildx-action@v3
         with:
-          driver: docker-container
-          buildkitd-flags: --allow-insecure-entitlement security.insecure --allow-insecure-entitlement network.host
-      
-      - name: Verify Buildx driver
-        run: docker buildx inspect
+          driver-opts: image=moby/buildkit:latest
 
-      - name: Create and use a new builder
+      # Verify the builder is correctly configured
+      - name: Inspect builder
         run: |
-          docker buildx create --use --name multi-platform-builder --driver docker-container
-          docker buildx inspect --bootstrap
-          
-      - name: Log into registry
+          echo "Name: ${{ steps.buildx.outputs.name }}"
+          echo "Driver: ${{ steps.buildx.outputs.driver }}"
+          echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
+
+      # Login to registry
+      - name: Login to GitHub Container Registry
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # Extract metadata for Docker
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
@@ -74,9 +75,9 @@ jobs:
             type=ref,event=tag
             type=raw,value=latest
 
-      - name: Build and push Docker image
-        id: build-and-push
-        uses: docker/build-push-action@v4
+      # Build and push Docker image
+      - name: Build and push
+        uses: docker/build-push-action@v5
         with:
           context: .
           platforms: linux/amd64,linux/arm64
@@ -85,42 +86,16 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          builder: multi-platform-builder
 
+      # Install cosign for signing
       - name: Install cosign
-        run: |
-          curl -LO https://github.com/sigstore/cosign/releases/latest/download/cosign-linux-amd64
-          chmod +x cosign-linux-amd64
-          sudo mv cosign-linux-amd64 /usr/local/bin/cosign
+        if: github.event_name != 'pull_request'
+        uses: sigstore/cosign-installer@v3.3.0
 
+      # Sign the published Docker image
       - name: Sign the published Docker image
         if: ${{ github.event_name != 'pull_request' }}
         env:
           TAGS: ${{ steps.meta.outputs.tags }}
           DIGEST: ${{ steps.build-and-push.outputs.digest }}
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
-
-  manifest:
-    needs: build
-    runs-on: self-hosted
-    if: github.event_name != 'pull_request'
-    permissions:
-      packages: write
-      id-token: write
-
-    steps:
-      - name: Log into registry
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create and push manifest
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09
-        with:
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:master
-          platforms: linux/amd64,linux/arm64
